# public-procurements-outcome-predictor

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  shortpaper.aux  shortpaper.out  shortpaper.tex
.cache/fontconfig/: 0107ccec317d51ad2f43189536458cc3-le64.cache-9  2bd209af2cb42d707fd3d9675d38d53f-le64.cache-9  43350adabad7f29520b3103ff340ae38-le64.cache-9  5a9d004dc459c6eaab4fcdf6e8b8e50c-le64.cache-9  6a5a9017de64263a2b76bb915a0a64a2-le64.cache-9  70307342cad6a8b67accaf38336d0696-le64.cache-9  a346ed01470da3ffb398c236a188e47c-le64.cache-9  a7f00a12bedc422685a023cfba708c76-le64.cache-9  b0d40e42b05aa3afbec74d86182d1373-le64.cache-9  fe44ad603488fb7acf454c76fab8a727-le64.cache-9
.mplconfig/: fontlist-v390.json
configs/: data.yaml
notebooks/: explore_dataset.ipynb
paper/: camera_ready_README.txt  shortpaper.aux  shortpaper.out  shortpaper.tex
paper/scripts/: compare_threshold_selection.py  generate_comparative_paper_figures.py  generate_paper_analysis.py  plot_mlflow_metrics.py
scripts/: baseline_dummy_classifiers.py  baseline_meanpooled_embeddings.py  baseline_tfidf_logreg.py  compare_threshold_selection.py  generate_paper_analysis.py  plot_mlflow_metrics.py  sync_embeddings_for_training.py  train_cv_mlflow.py
scripts/etl/: embed_pbcs.py  extract_pbcs_to_txt.py  fetch_ids_by_status.py  merge_and_download_pbcs.py  pbc_simple.py  spaces_io.py
scripts/once/: materialize_procurements_with_status.py
src/: config.py
src/data/: __init__.py  chunk_dataset.py  procurement_target.py
src/doc_extract/: __init__.py  reader.py
(+11 files in other folders)
